added yml file to output

--- a/OTUS.Homework/UnitTests.Homework/UnitTests.Homework.csproj
+++ b/OTUS.Homework/UnitTests.Homework/UnitTests.Homework.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include=".github\workflows\BuildAndTest.yml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
